# apps/server/src/files/files.controller.ts
@@ -1,19 +1,24 @@
 import {
+  Body,
   Controller,
   Get,
-  Param,
+  HttpException,
+  HttpStatus,
   Post,
   Req,
   UploadedFiles,
   UseGuards,
   UseInterceptors,
 } from '@nestjs/common';
-import { ApiConsumes, ApiResponse } from '@nestjs/swagger';
+import { ApiBody, ApiConsumes, ApiResponse } from '@nestjs/swagger';
 import { FileFieldsInterceptor } from '@nestjs/platform-express';
 import { FilesService } from './files.service';
 import { UploadFileDto } from './dto/upload-files.dto';
 import { AuthGuard } from 'src/auth/auth.guard';
 import type { Request } from 'express';
+import { UploadFileResponseDto } from './dto/upload-file-response.dto';
+import { UserFilesResponseDto } from './dto/user-files-response.dto';
+import { GetUrlFileInputDto } from './dto/geturl-file-input.dto';
 
 @Controller('files')
 @UseGuards(AuthGuard)
@@ -24,7 +29,35 @@ export class FilesController {
   @ApiResponse({
     status: 200,
   })
+  @ApiBody({
+    schema: {
+      type: 'object',
+      properties: {
+        face_photo: {
+          type: 'string',
+          format: 'binary',
+        },
+        thai_nationalid_copy: {
+          type: 'string',
+          format: 'binary',
+        },
+        parent_permission: {
+          type: 'string',
+          format: 'binary',
+        },
+        p1: {
+          type: 'string',
+          format: 'binary',
+        },
+        p7: {
+          type: 'string',
+          format: 'binary',
+        },
+      },
+    },
+  })
   @Post('upload')
+  @ApiResponse({ status: 200, type: UploadFileResponseDto })
   @UseInterceptors(
     FileFieldsInterceptor([
       { name: 'face_photo', maxCount: 1 },
@@ -38,8 +71,24 @@ export class FilesController {
     return this.filesService.uploadFile(files, req['user_id']);
   }
 
-  @Get(':filename')
-  getFiles(@Param('filename') filename: string) {
-    return this.filesService.getFile(filename);
+  @Post('getblobs')
+  @ApiResponse({ status: 200, type: UserFilesResponseDto })
+  getBlobs(@Body() urls: GetUrlFileInputDto) {
+    return this.filesService.getBlobs(urls);
+  }
+
+  @Post('geturl')
+  @ApiResponse({ status: 200, type: UserFilesResponseDto })
+  getFiles(@Body() urls: GetUrlFileInputDto) {
+    return this.filesService.getFile(urls);
+  }
+
+  @Get('user-files')
+  @ApiResponse({ status: 200, type: UserFilesResponseDto })
+  getUserFiles(@Req() req: Request) {
+    if (!req['user_id']) {
+      throw new HttpException('Not found', HttpStatus.NOT_FOUND);
+    }
+    return this.filesService.getUserFiles(req['user_id']);
   }
 }
